# JustcoreRaycasting

./: .gitignore  CMakeLists.txt  Main.cpp
assets/: TestMap.txt
src/: AssetLoader.cpp  AssetLoader.hpp  Color.cpp  Color.hpp  Game.cpp  Game.hpp  Main.cpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
src/entities/: Player.cpp  Player.hpp
src/math/: Vec2.cpp  Vec2.hpp
src/rendering/: MinimapRenderer.cpp  MinimapRenderer.hpp  Raycast.cpp  Raycast.hpp  WorldRenderer.cpp  WorldRenderer.hpp
